# esp32-ble-gateway

./: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  ntp.rs  peripherals.rs  preludes.rs  rpc.rs  websocket.rs  wifi.rs
