[package]
name = "esp-idf-example"
version = "0.1.0"
authors = ["itzbenz"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-idf-example"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
toml-cfg = "0.2.0"
anyhow = "1.0.86"
esp-idf-hal = "0.44.1"
embedded-svc = "0.28.0"
uuid = {version = "1.10.0", features = ["v4"]}
async-tungstenite = {version = "0.26.2", features = ["tokio-runtime"]}
futures-util = "0.3.30"
tokio = { version = "*", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
parking_lot = "0.12.3"
lazy_static = "1.5.0"
esp-idf-sys = "0.35.0"
paste = "1.0.15"
prost = "0.13.1"
heapless = "0.8.0"
chrono = "0.4.38"
bytes = "1.6.1"
hex = "0.4.3"
byteorder = "1.5.0"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"


